fix double scroll and some styles

--- a/src/App.css
+++ b/src/App.css
@@ -74,10 +74,6 @@
 }
 
 
-.hero {
-  min-height: 120vh;
-}
-
 .hero__subheader {
     font-weight: 300;
     font-size: 1.563rem;
